--- a/tsconfig.json
+++ b/tsconfig.json
@@ -45,6 +45,9 @@
       ],
       "products": [
         "dist/products"
+      ],
+      "documents": [
+        "dist/documents"
       ]
     }
   }
