--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "@angular/platform-browser-dynamic": "^6.1.10",
     "@angular/router": "^6.1.10",
     "@ngx-translate/core": "^11.0.1",
-    "rxjs": "^6.3.3",
-    "rxjs-compat": "^6.3.3",
+    "rxjs": "6.3.2",
+    "rxjs-compat": "6.3.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
