--- a/.drone.yml
+++ b/.drone.yml
@@ -45,7 +45,7 @@ pipeline:
     image: plugins/docker
     insecure: true
     registry: registry.tola.io
-    repo: registry.tola.io/humanitec-walhall/walhall-sample-angular-app:0.0.18
+    repo: registry.tola.io/humanitec-walhall/walhall-sample-angular-app
     file: Dockerfile
     auto_tag: true
     branch: environment
