--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -12,5 +12,8 @@
   "include": [
     "**/*",
     "../projects/midgard-angular/src/lib/midgard.module.ts"
+  ],
+  "files": [
+    "../typings/json.d.ts"
   ]
 }
