--- a/src/tsconfig.spec.json
+++ b/src/tsconfig.spec.json
@@ -9,7 +9,8 @@
   },
   "files": [
     "test.ts",
-    "polyfills.ts"
+    "polyfills.ts",
+    "../typings/json.d.ts"
   ],
   "include": [
     "**/*.spec.ts",
