--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -13,7 +13,8 @@
     "**/*",
     "../projects/midgard-angular/src/lib/midgard.module.ts",
     "../projects/products/src/lib/products.module.ts",
-    "../projects/documents/src/lib/documents.module.ts"
+    "../projects/documents/src/lib/documents.module.ts",
+    "../projects/contacts/src/lib/contacts.module.ts"
   ],
   "files": [
     "../typings/json.d.ts"
