--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "build-prod": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build --no-progress --prod",
     "test": "ng test",
+    "test-coverage": "ng test —code-coverage",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "init": "gulp init --gulpfile node_modules/midgard-schematics/lib/gulpfile.js --cwd ./",
