--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -14,7 +14,9 @@
     "../projects/midgard-angular/src/lib/midgard.module.ts",
     "../projects/products/src/lib/products.module.ts",
     "../projects/documents/src/lib/documents.module.ts",
-    "../projects/contacts/src/lib/contacts.module.ts"
+    "../projects/contacts/src/lib/contacts.module.ts",
+    "../projects/dashboards/src/lib/dashboards.module.ts",
+    "../projects/forms/src/lib/forms.module.ts"
   ],
   "files": [
     "../typings/json.d.ts"
