--- a/angular.json
+++ b/angular.json
@@ -1,7 +1,7 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
-  "newProjectRoot": "projects",
+  "newProjectRoot": "clients",
   "projects": {
     "midgard-app": {
       "root": "",
@@ -12,7 +12,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/walhall-sample-angular-app",
+            "outputPath": "dist/midgard-app",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -52,18 +52,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "walhall-sample-angular-app:build"
+            "browserTarget": "midgard-app:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "walhall-sample-angular-app:build:production"
+              "browserTarget": "midgard-app:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "walhall-sample-angular-app:build"
+            "browserTarget": "midgard-app:build"
           }
         },
         "test": {
@@ -100,7 +100,7 @@
         }
       }
     },
-    "walhall-sample-angular-app-e2e": {
+    "midgard-app-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -108,11 +108,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "walhall-sample-angular-app:serve"
+            "devServerTarget": "midgard-app:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "walhall-sample-angular-app:serve:production"
+              "devServerTarget": "midgard-app:serve:production"
             }
           }
         },
