--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "init": "gulp init --gulpfile node_modules/midgard-schematics/lib/gulpfile.js --cwd ./",
-    "compodoc": "./node_modules/.bin/compodoc -p ./@src/midgard-modules/tsconfig.lib.json"
+    "compodoc": "./node_modules/.bin/compodoc -p ./src/midgard/tsconfig.lib.json"
   },
   "private": true,
   "dependencies": {
@@ -55,6 +55,7 @@
     "@types/jasmine": "^2.8.11",
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "~8.9.4",
+    "apollo-utilities": "1.0.25",
     "codelyzer": "~4.2.1",
     "jasmine-core": "^2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -63,15 +64,14 @@
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "midgard-schematics": "1.1.1",
+    "midgard-schematics": "^1.1.10",
     "ng-packagr": "^3.0.0",
     "protractor": "~5.4.0",
+    "redux-devtools-extension": "^2.13.5",
     "ts-node": "~5.0.1",
     "tsickle": "^0.33.1",
     "tslib": "^1.9.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.8.0",
-    "apollo-utilities": "1.0.25",
-    "redux-devtools-extension": "^2.13.5"
+    "typescript": "~2.8.0"
   }
 }
