--- a/package.json
+++ b/package.json
@@ -27,21 +27,21 @@
     "@angular/platform-browser-dynamic": "^6.1.10",
     "@angular/router": "^6.1.10",
     "@ngx-translate/core": "^11.0.1",
-    "apollo-angular": "1.5.0",
-    "apollo-angular-link-http": "^1.5.0",
-    "apollo-cache-inmemory": "^1.3.0",
-    "apollo-client": "2.4.13",
-    "apollo-link": "^1.2.8",
-    "apollo-link-context": "^1.0.10",
+    "zone.js": "~0.8.26",
     "core-js": "^2.6.0",
-    "freyja-ui": "^0.1.9",
-    "graphql": "^0.13.2",
-    "graphql-tag": "^2.10.1",
     "midgard-core": "^0.1.2",
+    "freyja-ui": "^0.1.9",
     "moment": "^2.22.2",
     "rxjs": "6.3.2",
     "rxjs-compat": "6.3.2",
-    "zone.js": "~0.8.26"
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.10.1",
+    "apollo-angular": "1.5.0",
+    "apollo-angular-link-http": "^1.5.0",
+    "apollo-cache-inmemory": "1.3.0",
+    "apollo-client": "2.4.13",
+    "apollo-link": "^1.2.8",
+    "apollo-link-context": "^1.0.10"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.7.0",
