--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "graphql-tag": "^2.10.1",
     "apollo-angular": "1.5.0",
     "apollo-angular-link-http": "^1.5.0",
-    "apollo-cache-inmemory": "1.3.0",
+    "apollo-cache-inmemory": "1.2.5",
     "apollo-client": "2.4.13",
     "apollo-link": "^1.2.8",
     "apollo-link-context": "^1.0.10"
@@ -55,7 +55,6 @@
     "@types/jasmine": "^2.8.11",
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "~8.9.4",
-    "apollo-utilities": "1.0.25",
     "codelyzer": "~4.2.1",
     "jasmine-core": "^2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -72,6 +71,7 @@
     "tsickle": "^0.33.1",
     "tslib": "^1.9.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.8.0"
+    "typescript": "~2.8.0",
+    "apollo-utilities": "1.0.25",
   }
 }
