--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@ngx-translate/core": "^11.0.1",
     "apollo-angular": "1.5.0",
     "apollo-angular-link-http": "^1.5.0",
-    "apollo-cache-inmemory": "1.2.8",
+    "apollo-cache-inmemory": "1.3.0",
     "apollo-client": "2.4.13",
     "apollo-link": "^1.2.8",
     "apollo-link-context": "^1.0.10",
@@ -71,7 +71,7 @@
     "tsickle": "^0.33.1",
     "tslib": "^1.9.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.8.0",
+    "typescript": "2.8.4",
     "apollo-utilities": "1.0.25"
   }
 }
