--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "@angular/router": "^6.1.10",
     "@ngx-translate/core": "^11.0.1",
     "apollo-angular": "1.5.0",
-    "apollo-angular-link-http": "^1.5.0",
+    "apollo-angular-link-http": "1.5.0",
     "apollo-cache-inmemory": "1.3.0",
     "apollo-client": "2.4.13",
-    "apollo-link": "^1.2.8",
-    "apollo-link-context": "^1.0.10",
+    "apollo-link": "1.2.8",
+    "apollo-link-context": "1.0.14",
     "core-js": "^2.6.0",
     "freyja-ui": "^0.1.9",
     "graphql": "^0.13.2",
@@ -54,7 +54,7 @@
     "@compodoc/compodoc": "^1.1.7",
     "@types/jasmine": "^2.8.11",
     "@types/jasminewd2": "^2.0.6",
-    "@types/node": "~8.9.4",
+    "@types/node": "8.9.5",
     "codelyzer": "~4.2.1",
     "jasmine-core": "^2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -67,7 +67,7 @@
     "ng-packagr": "^3.0.0",
     "protractor": "~5.4.0",
     "redux-devtools-extension": "^2.13.5",
-    "ts-node": "~5.0.1",
+    "ts-node": "5.0.1",
     "tsickle": "^0.33.1",
     "tslib": "^1.9.0",
     "tslint": "~5.9.1",
