--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "moment": "^2.22.2",
     "rxjs": "6.3.2",
     "rxjs-compat": "6.3.2",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+    "apollo-utilities": "1.0.25"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.7.0",
