--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "apollo-client": "2.4.13",
     "apollo-link": "1.2.8",
     "apollo-link-context": "1.0.14",
+    "apollo-utilities": "1.0.25",
     "core-js": "^2.6.0",
     "freyja-ui": "^0.1.9",
     "graphql": "^0.13.2",
@@ -41,8 +42,7 @@
     "moment": "^2.22.2",
     "rxjs": "6.3.2",
     "rxjs-compat": "6.3.2",
-    "zone.js": "~0.8.26",
-    "apollo-utilities": "1.0.25"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.7.0",
@@ -56,6 +56,7 @@
     "@types/jasmine": "^2.8.11",
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "8.9.5",
+    "apollo-utilities": "1.0.25",
     "codelyzer": "~4.2.1",
     "jasmine-core": "^2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -64,7 +65,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "midgard-schematics": "^1.1.10",
+    "midgard-schematics": "^1.1.11",
     "ng-packagr": "^3.0.0",
     "protractor": "~5.4.0",
     "redux-devtools-extension": "^2.13.5",
@@ -72,7 +73,6 @@
     "tsickle": "^0.33.1",
     "tslib": "^1.9.0",
     "tslint": "~5.9.1",
-    "typescript": "2.8.4",
-    "apollo-utilities": "1.0.25"
+    "typescript": "2.8.4"
   }
 }
