--- a/config.json
+++ b/config.json
@@ -7,7 +7,7 @@
       "commitId": "234ba5f0",
       "config": {
         "parentExitPointComponent": {
-          "path": "@src/midgard-modules/components/nav-bar/nav-bar.component.html",
+          "path": "src/midgard/components/nav-bar/nav-bar.component.html",
           "elementId": "navbar",
           "componentSelector": "mg-navbar-elem",
           "options" : {
@@ -30,7 +30,7 @@
       "commitId": "234ba5f0",
       "config": {
         "parentExitPointComponent": {
-          "path": "@src/midgard-modules/components/nav-bar/nav-bar.component.html",
+          "path": "src/midgard/components/nav-bar/nav-bar.component.html",
           "elementId": "navbar",
           "componentSelector": "mg-navbar-elem",
           "options" : {
@@ -53,7 +53,7 @@
       "commitId": "234ba5f0",
       "config": {
         "parentExitPointComponent": {
-          "path": "@src/midgard-modules/components/nav-bar/nav-bar.component.html",
+          "path": "src/midgard/components/nav-bar/nav-bar.component.html",
           "elementId": "navbar",
           "componentSelector": "mg-navbar-elem",
           "options" : {
@@ -76,7 +76,7 @@
       "commitId": "123sad12",
       "config": {
         "parentExitPointComponent": {
-          "path": "@src/midgard-modules/components/nav-bar/nav-bar.component.html",
+          "path": "src/midgard/components/nav-bar/nav-bar.component.html",
           "elementId": "navbar",
           "componentSelector": "mg-navbar-elem",
           "options" : {
@@ -99,7 +99,7 @@
       "commitId": "234ba5f0",
       "config": {
         "parentExitPointComponent": {
-          "path": "@src/midgard-modules/components/nav-bar/nav-bar.component.html",
+          "path": "src/midgard/components/nav-bar/nav-bar.component.html",
           "elementId": "navbar",
           "componentSelector": "mg-navbar-elem",
           "options" : {
