--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 9000;
-    server_name walhall-sample-angular-app;
-    root /app/dist/walhall-sample-angular-app/;
+    server_name midgard-angular;
+    root /app/dist/midgard-angular/;
     index index.html;
     # Force all paths to load either itself (js files) or go through index.html.
     location / {
