--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "clients",
   "projects": {
-    "midgard-app": {
+    "midgard-angular": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -12,7 +12,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/midgard-app",
+            "outputPath": "dist/midgard-angular",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -52,18 +52,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "midgard-app:build"
+            "browserTarget": "midgard-angular:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "midgard-app:build:production"
+              "browserTarget": "midgard-angular:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "midgard-app:build"
+            "browserTarget": "midgard-angular:build"
           }
         },
         "test": {
@@ -100,7 +100,7 @@
         }
       }
     },
-    "midgard-app-e2e": {
+    "midgard-angular-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -108,11 +108,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "midgard-app:serve"
+            "devServerTarget": "midgard-angular:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "midgard-app:serve:production"
+              "devServerTarget": "midgard-angular:serve:production"
             }
           }
         },
@@ -128,5 +128,5 @@
       }
     }
   },
-  "defaultProject": "midgard-app"
+  "defaultProject": "midgard-angular"
 }
