--- a/package.json
+++ b/package.json
@@ -15,18 +15,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.10",
-    "@angular/cdk": "^6.2.0",
-    "@angular/common": "^6.1.10",
-    "@angular/compiler": "^6.1.10",
-    "@angular/core": "^6.1.10",
-    "@angular/forms": "^6.1.10",
-    "@angular/http": "^6.1.10",
-    "@angular/material": "^6.4.7",
-    "@angular/platform-browser": "^6.1.10",
-    "@angular/platform-browser-dynamic": "^6.1.10",
-    "@angular/router": "^6.1.10",
-    "@ngx-translate/core": "^11.0.1",
+    "@angular/animations": "6.1.10",
+    "@angular/cdk": "6.2.0",
+    "@angular/common": "6.1.10",
+    "@angular/compiler": "6.1.10",
+    "@angular/core": "6.1.10",
+    "@angular/forms": "6.1.10",
+    "@angular/http": "6.1.10",
+    "@angular/material": "6.4.7",
+    "@angular/platform-browser": "6.1.10",
+    "@angular/platform-browser-dynamic": "6.1.10",
+    "@angular/router": "6.1.10",
+    "@ngx-translate/core": "11.0.1",
     "apollo-angular": "1.5.0",
     "apollo-angular-link-http": "1.5.0",
     "apollo-cache-inmemory": "1.3.0",
@@ -34,12 +34,12 @@
     "apollo-link": "1.2.8",
     "apollo-link-context": "1.0.14",
     "apollo-utilities": "1.0.25",
-    "core-js": "^2.6.0",
-    "freyja-ui": "^0.1.9",
-    "graphql": "^0.13.2",
-    "graphql-tag": "^2.10.1",
-    "midgard-core": "^0.1.2",
-    "moment": "^2.22.2",
+    "core-js": "2.6.0",
+    "freyja-ui": "0.1.9",
+    "graphql": "0.13.2",
+    "graphql-tag": "2.10.1",
+    "midgard-core": "0.1.2",
+    "moment": "2.22.2",
     "rxjs": "6.3.2",
     "rxjs-compat": "6.3.2",
     "zone.js": "~0.8.26"
