--- a/package.json
+++ b/package.json
@@ -27,9 +27,6 @@
     "@angular/platform-browser-dynamic": "^6.1.10",
     "@angular/router": "^6.1.10",
     "@ngx-translate/core": "^11.0.1",
-    "rxjs": "6.3.2",
-    "rxjs-compat": "6.3.2",
-    "zone.js": "~0.8.26",
     "apollo-angular": "1.5.0",
     "apollo-angular-link-http": "1.5.0",
     "apollo-cache-inmemory": "1.3.0",
@@ -38,11 +35,14 @@
     "apollo-link-context": "1.0.14",
     "apollo-utilities": "1.0.25",
     "core-js": "2.6.0",
-    "freyja-ui": "0.1.9",
+    "freyja-ui": "^0.1.10",
     "graphql": "0.13.2",
     "graphql-tag": "2.10.1",
     "midgard-core": "0.1.2",
-    "moment": "2.22.2"
+    "moment": "2.22.2",
+    "rxjs": "6.3.2",
+    "rxjs-compat": "6.3.2",
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.7.0",
