--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "init": "gulp init --gulpfile node_modules/midgard-schematics/lib/gulpfile.js --cwd ./",
-    "compodoc": "./node_modules/.bin/compodoc -p ./src/midgard/tsconfig.lib.json"
+    "compodoc": "./node_modules/.bin/compodoc -p ./src/midgard/tsconfig.lib.json",
+    "publish-pacts": "node publish-pacts.js"
   },
   "private": true,
   "dependencies": {
@@ -53,6 +54,9 @@
     "@angular/compiler-cli": "^6.1.10",
     "@angular/language-service": "^6.1.10",
     "@compodoc/compodoc": "^1.1.7",
+    "@pact-foundation/karma-pact": "^2.1.3",
+    "@pact-foundation/pact-node": "^6.5.0",
+    "@pact-foundation/pact-web": "^5.3.0",
     "@types/jasmine": "^2.8.11",
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "8.9.5",
