--- a/.drone.yml
+++ b/.drone.yml
@@ -6,12 +6,10 @@ pipeline:
     commands:
       - npm install npm-login-cmd -g
       - npm install gulp-cli -g
-      - npm config set registry https://npm-proxy.fury.io/$${NPM_TOKEN}/humanitec/
-      - npm config set always-auth
       - npx npm-login-cmd
       - npm install
       - npm run init
-    secrets: [NPM_USER, NPM_PASS, NPM_EMAIL, NPM_TOKEN]
+    secrets: []
     when:
       event: [push, tag]
 
