--- a/config.json
+++ b/config.json
@@ -1,45 +1,28 @@
 {
-  "appEntryPoint": "/user",
-  "appTitle": "My App",
-  "modules": [
-    {
-      "name": "dashboards",
-      "url": "https://github.com/Humanitec/dashboards-client-angular.git",
-      "commitId": "234ba5f0",
-      "config": {
-        "parentExitPointComponent": {
-          "path": "src/midgard/components/nav-bar/nav-bar.component.html",
-          "elementId": "navbar",
-          "componentSelector": "mg-navbar-elem",
-          "options": {
-            "icon": "dashboard",
-            "label": "Dashboards",
-            "route": "dashboards"
-          }
-        }
-      }
-    },
-    {
-        "url": "git@github.com:Humanitec-Walhall/midgard-products.git",
-        "name": "products",
-        "config": {
-            "entryPointComponent": "",
-            "routingModuleOptions": {
-                "path": "projects/midgard-angular/src/lib/midgard-routing.module.ts",
-                "parentComponent": "MidgardComponent",
-                "childrenArrayIndex": "0"
-            },
-            "parentExitPointComponent": {
-                "path": "projects/midgard-angular/src/lib/components/nav-bar/nav-bar.component.html",
-                "options": {
-                    "icon": "local_offer",
-                    "label": "Products",
-                    "route": "products"
+    "appEntryPoint": "/user",
+    "appTitle": "Testtt App",
+    "modules": [
+        {
+            "url": "git@github.com:jefmoura/midgard-products.git",
+            "name": "products",
+            "config": {
+                "entryPointComponent": "",
+                "routingModuleOptions": {
+                    "path": "projects/midgard-angular/src/lib/midgard-routing.module.ts",
+                    "parentComponent": "MidgardComponent",
+                    "childrenArrayIndex": "0"
                 },
-                "elementId": "navbar",
-                "componentSelector": "mg-navbar-elem"
+                "parentExitPointComponent": {
+                    "path": "projects/midgard-angular/src/lib/components/nav-bar/nav-bar.component.html",
+                    "options": {
+                        "icon": "local_offer",
+                        "label": "Products",
+                        "route": "products"
+                    },
+                    "elementId": "navbar",
+                    "componentSelector": "mg-navbar-elem"
+                }
             }
         }
-    }
     ]
 }
