--- a/config.json
+++ b/config.json
@@ -1,31 +1,10 @@
 {
     "appEntryPoint": "/user",
-    "appTitle": "Parag Test App",
+    "appTitle": "Parag New App",
     "modules": [
         {
-            "url": "git@github.com:Humanitec-Walhall/midgard-documents.git",
-            "name": "documents",
-            "config": {
-                "entryPointComponent": "",
-                "routingModuleOptions": {
-                    "path": "projects/midgard-angular/src/lib/midgard-routing.module.ts",
-                    "parentComponent": "WorkflowLevel2DetailComponent",
-                    "childrenArrayIndex": "1"
-                },
-                "parentExitPointComponent": {
-                    "path": "projects/midgard-angular/src/lib/pages/workflow-level2/detail/workflow-level2-detail.component.html",
-                    "options": {
-                        "label": "Documents",
-                        "routerOutlet": "documents"
-                    },
-                    "elementId": "tabs",
-                    "componentSelector": "mat-tab"
-                }
-            }
-        },
-        {
-            "url": "git@github.com:Humanitec-Walhall/midgard-products.git",
-            "name": "products",
+            "url": "https://github.com/Humanitec-Walhall/blueprint-client-angular.git",
+            "name": "blueprint",
             "config": {
                 "entryPointComponent": "",
                 "routingModuleOptions": {
@@ -36,9 +15,9 @@
                 "parentExitPointComponent": {
                     "path": "projects/midgard-angular/src/lib/components/nav-bar/nav-bar.component.html",
                     "options": {
-                        "icon": "local_offer",
-                        "label": "Products",
-                        "route": "products"
+                        "icon": "",
+                        "label": "Blueprint",
+                        "route": "blueprint"
                     },
                     "elementId": "navbar",
                     "componentSelector": "mg-navbar-elem"
