--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "appEntryPoint": "/user",
-    "appTitle": "Jeferson App",
+    "appTitle": "ylmzapp",
     "modules": [
         {
             "url": "https://github.com/Humanitec/products-client-angular.git",
@@ -21,27 +21,6 @@
                     },
                     "elementId": "navbar",
                     "componentSelector": "mg-navbar-elem"
-                }
-            }
-        },
-        {
-            "url": "https://github.com/Humanitec/documents-client-angular.git",
-            "name": "documents",
-            "config": {
-                "entryPointComponent": "",
-                "routingModuleOptions": {
-                    "path": "projects/midgard-angular/src/lib/midgard-routing.module.ts",
-                    "parentComponent": "WorkflowLevel2DetailComponent",
-                    "childrenArrayIndex": "1"
-                },
-                "parentExitPointComponent": {
-                    "path": "projects/midgard-angular/src/lib/pages/workflow-level2/detail/workflow-level2-detail.component.html",
-                    "options": {
-                        "label": "Documents",
-                        "routerOutlet": "documents"
-                    },
-                    "elementId": "tabs",
-                    "componentSelector": "mat-tab"
                 }
             }
         }
