Update file from Walhall

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "appEntryPoint": "/user",
-    "appTitle": "Testtest",
+    "appTitle": "test",
     "modules": [
         {
             "url": "https://github.com/Humanitec/products-client-angular.git",
