--- a/config.json
+++ b/config.json
@@ -35,7 +35,7 @@
                     "childrenArrayIndex": "0"
                 },
                 "parentExitPointComponent": {
-                    "path": "midgard/components/nav-bar/nav-bar.component.html",
+                    "path": "src/midgard/components/nav-bar/nav-bar.component.html",
                     "options": {
                         "icon": "local_offer",
                         "label": "Products",
@@ -103,7 +103,7 @@
             "parentExitPointComponent": {
               "path": "src/midgard/components/nav-bar/nav-bar.component.html",
               "options": {
-                "icon": "dashboard",
+                "icon": "rounded_corner",
                 "label": "Blueprint",
                 "route": "clients"
               },
