--- a/config.json
+++ b/config.json
@@ -1,26 +1,25 @@
 {
     "appEntryPoint": "/user",
-    "appTitle": "Nikolai App",
+    "appTitle": "YG-Test",
     "modules": [
         {
-            "url": "git@github.com:Humanitec-Walhall/midgard-products.git",
-            "name": "products",
+            "url": "git@github.com:Humanitec-Walhall/midgard-documents.git",
+            "name": "documents",
             "config": {
                 "entryPointComponent": "",
                 "routingModuleOptions": {
                     "path": "projects/midgard-angular/src/lib/midgard-routing.module.ts",
-                    "parentComponent": "MidgardComponent",
-                    "childrenArrayIndex": "0"
+                    "parentComponent": "WorkflowLevel2DetailComponent",
+                    "childrenArrayIndex": "1"
                 },
                 "parentExitPointComponent": {
-                    "path": "projects/midgard-angular/src/lib/components/nav-bar/nav-bar.component.html",
+                    "path": "projects/midgard-angular/src/lib/pages/workflow-level2/detail/workflow-level2-detail.component.html",
                     "options": {
-                        "icon": "local_offer",
-                        "label": "Products",
-                        "route": "products"
+                        "label": "Documents",
+                        "routerOutlet": "documents"
                     },
-                    "elementId": "navbar",
-                    "componentSelector": "mg-navbar-elem"
+                    "elementId": "tabs",
+                    "componentSelector": "mat-tab"
                 }
             }
         }
