Update file from Walhall

--- a/config.json
+++ b/config.json
@@ -1,7 +1,29 @@
 {
     "appEntryPoint": "/user",
-    "appTitle": "YG-Test",
+    "appTitle": "SampleApp",
     "modules": [
+        {
+            "url": "git@github.com:Humanitec-Walhall/midgard-products.git",
+            "name": "products",
+            "config": {
+                "entryPointComponent": "",
+                "routingModuleOptions": {
+                    "path": "projects/midgard-angular/src/lib/midgard-routing.module.ts",
+                    "parentComponent": "MidgardComponent",
+                    "childrenArrayIndex": "0"
+                },
+                "parentExitPointComponent": {
+                    "path": "projects/midgard-angular/src/lib/components/nav-bar/nav-bar.component.html",
+                    "options": {
+                        "icon": "local_offer",
+                        "label": "Products",
+                        "route": "products"
+                    },
+                    "elementId": "navbar",
+                    "componentSelector": "mg-navbar-elem"
+                }
+            }
+        },
         {
             "url": "git@github.com:Humanitec-Walhall/midgard-documents.git",
             "name": "documents",
