--- a/config.json
+++ b/config.json
@@ -1,19 +1,40 @@
 {
     "appEntryPoint": "/user",
-    "appTitle": "docktorrr app",
+    "appTitle": "App n roll app",
     "modules": [
         {
-            "url": "git@github.com:Humanitec/products_client_angular.git",
+            "url": "git@github.com:Humanitec-Walhall/midgard-documents.git",
+            "name": "documents",
+            "config": {
+                "entryPointComponent": "",
+                "routingModuleOptions": {
+                    "path": "projects/midgard-angular/src/lib/midgard-routing.module.ts",
+                    "parentComponent": "WorkflowLevel2DetailComponent",
+                    "childrenArrayIndex": "1"
+                },
+                "parentExitPointComponent": {
+                    "path": "projects/midgard-angular/src/lib/pages/workflow-level2/detail/workflow-level2-detail.component.html",
+                    "options": {
+                        "label": "Documents",
+                        "routerOutlet": "documents"
+                    },
+                    "elementId": "tabs",
+                    "componentSelector": "mat-tab"
+                }
+            }
+        },
+        {
+            "url": "git@github.com:Humanitec-Walhall/midgard-products.git",
             "name": "products",
             "config": {
                 "entryPointComponent": "",
                 "routingModuleOptions": {
-                    "path": "src/midgard/midgard-routing.module.ts",
+                    "path": "projects/midgard-angular/src/lib/midgard-routing.module.ts",
                     "parentComponent": "MidgardComponent",
                     "childrenArrayIndex": "0"
                 },
                 "parentExitPointComponent": {
-                    "path": "src/midgard/components/nav-bar/nav-bar.component.html",
+                    "path": "projects/midgard-angular/src/lib/components/nav-bar/nav-bar.component.html",
                     "options": {
                         "icon": "local_offer",
                         "label": "Products",
