Update file from Walhall

--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
     "appEntryPoint": "/user",
-    "appTitle": "App n roll app",
+    "appTitle": "what",
     "modules": [
         {
-            "url": "git@github.com:Humanitec-Walhall/midgard-documents.git",
+            "url": "https://github.com/glind/documents-client-angular.git",
             "name": "documents",
             "config": {
                 "entryPointComponent": "",
@@ -20,28 +20,6 @@
                     },
                     "elementId": "tabs",
                     "componentSelector": "mat-tab"
-                }
-            }
-        },
-        {
-            "url": "git@github.com:Humanitec-Walhall/midgard-products.git",
-            "name": "products",
-            "config": {
-                "entryPointComponent": "",
-                "routingModuleOptions": {
-                    "path": "projects/midgard-angular/src/lib/midgard-routing.module.ts",
-                    "parentComponent": "MidgardComponent",
-                    "childrenArrayIndex": "0"
-                },
-                "parentExitPointComponent": {
-                    "path": "projects/midgard-angular/src/lib/components/nav-bar/nav-bar.component.html",
-                    "options": {
-                        "icon": "local_offer",
-                        "label": "Products",
-                        "route": "products"
-                    },
-                    "elementId": "navbar",
-                    "componentSelector": "mg-navbar-elem"
                 }
             }
         }
