fix midgard alias

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
         "src/clients/*"
       ],
       "@midgard/*": [
-        "src/clients/*"
+        "src/midgard/*"
       ],
       "@projects/*": [
         "projects/*"
