Update file from Walhall

--- a/config.json
+++ b/config.json
@@ -1,7 +1,28 @@
 {
     "appEntryPoint": "/user",
-    "appTitle": "Parag",
+    "appTitle": "Test",
     "modules": [
+        {
+            "url": "git@github.com:Humanitec-Walhall/midgard-documents.git",
+            "name": "documents",
+            "config": {
+                "entryPointComponent": "",
+                "routingModuleOptions": {
+                    "path": "projects/midgard-angular/src/lib/midgard-routing.module.ts",
+                    "parentComponent": "WorkflowLevel2DetailComponent",
+                    "childrenArrayIndex": "1"
+                },
+                "parentExitPointComponent": {
+                    "path": "projects/midgard-angular/src/lib/pages/workflow-level2/detail/workflow-level2-detail.component.html",
+                    "options": {
+                        "label": "Documents",
+                        "routerOutlet": "documents"
+                    },
+                    "elementId": "tabs",
+                    "componentSelector": "mat-tab"
+                }
+            }
+        },
         {
             "url": "git@github.com:Humanitec-Walhall/midgard-products.git",
             "name": "products",
