--- a/angular.json
+++ b/angular.json
@@ -22,10 +22,8 @@
               "src/assets"
             ],
             "styles": [
-              {
-                "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
-              },
-              "src/styles.scss"
+              "src/styles.scss",
+              "./src/clients/locations/node_modules/leaflet/dist/leaflet.css"
             ],
             "scripts": []
           },
